# filp_cors

./: CHANGELOG.md  tryui.cabal
app/: Main.hs  front.glade  front.glade~
app/Ent/: Diagnosis.hs  Drugs.hs  Procedures.hs  Symptoms.hs
app/Func/: DiagFinder.hs  DiagGradation.hs  Executor.hs  IDPacker.hs  MainHandlers.hs  Parser.hs  Sorter.hs
app/txt/: diags.txt
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/tmp/src-16872/gi-gobject-2.0.27/: README.md  Setup.hs
dist-newstyle/tmp/src-16873/gi-gmodule-2.0.2/: README.md  Setup.hs
