cabal-version:      2.4
name:               tryui
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Vova Nagornyj
maintainer:         vova-nagornyj@mail.ru

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable tryui
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , gi-gtk
                     , haskell-gi-base
                     , text
                     , gi-gdk
